Fixes, fixes: * calculate accuracy directly from json data and return to js * table updated to use accuracy instead of MI * table formatting + column alignment * passing teamname via url `&teamname=xyz` selects the row of this team with highest rank

--- a/scoreboard/main.css
+++ b/scoreboard/main.css
@@ -21,3 +21,16 @@
 .languageSelector img {
     height: 2em;
 }
+
+
+table.dataTable thead>tr>th {
+    padding-left: .5em !important;
+    padding-right: .5em !important;
+}
+
+table.dataTable thead .sorting:after {
+    content: none !important;
+}
+table.dataTable thead .sorting:before {
+    content: none !important;
+}
